test/errors/typecheck/bad_not.ty
foo := func(s: string) -> string {
	return !s
}